# PeekingDuckStudio

./: .gitignore  LICENSE  PeekingDuckGUI.kv  PeekingDuckGUI.py  PipelineGraphics.kv  PipelineGraphics.py  PipelineUI.py  README.md  __main__.py  colors.py  config_controller.py  config_parser.py  gui_peekingduck.py  gui_utils.py  gui_widgets.py  mac_file__main__.spec  mac_onedir__main__.spec  output_controller.py  peekingduckgui.kv  pipeline_controller.py  pipeline_model.py  pkd_gui_technotes.txt  pkdgui.kv  pkdgui.py  pkdgui_widgets.py  pkds_mac.icns  pyproject.toml  requirements.txt  setup.cfg  win_file__main__.spec
peekingduck_gui/: __init__.py  app.py  config_controller.py  config_parser.py  gui_widgets.py  output_controller.py  peekingduckgui.kv  pipeline_controller.py
peekingduck_studio/: __init__.py  app.py  colors.py  config_controller.py  config_parser.py  gui_utils.py  gui_widgets.py  model_node.py  model_pipeline.py  output_controller.py  peekingduckstudio.kv  pipeline_controller.py  pipeline_model.py  pkds_technotes.txt
src/peekingduck_gui/: config_parser.py  gui_widgets.py  output_controller.py  pipeline_controller.py  setup.py  technotes_pkdgui.txt
temp/: PeekingDuckGUI.kv  PeekingDuckGUI.py  PipelineGraphics.kv
