[metadata]
name = peekingduck-studio
version = 1.0.0
author = David Ong Tat-Wee
author_email = dotw@mac.com
description = PeekingDuck Studio
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aimakerspace/PeekingDuck
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7, <3.10
# install_requires =
    # click == 7.1.2
    # colorama == 0.4.4
    # pyyaml >= 5.3
    # requests == 2.24.0
    # tqdm == 4.45.0
    # scipy >= 1.4.1
    # ffmpeg == 1.4
    # opencv-python == 4.5.5.64
    # torch == 1.11.0
    # torchvision == 0.12.0
    # kivy == 2.1.0
    # tensorflow-estimator==2.6.0
    # tensorflow-metal==0.2.0
    # tensorflow-macos==2.6.0
    # peekingduck == 1.2.0

[options.packages.find]
where = src